--- a/app/src/main/res/layout/activity_item_menu.xml
+++ b/app/src/main/res/layout/activity_item_menu.xml
@@ -85,6 +85,7 @@
         android:layout_marginLeft="149dp"
         android:layout_marginStart="149dp"
         android:layout_marginTop="21dp"
+        android:onClick="onAddtoCartButtonPush"
         android:text="@string/AddToCart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
