--- a/app/src/main/res/layout/activity_market_home.xml
+++ b/app/src/main/res/layout/activity_market_home.xml
@@ -30,7 +30,7 @@
         android:hint="@string/Password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <TextView
         android:id="@+id/textView"
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/userName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="84dp"
