* Intergrated with 'delivery'

--- a/app/src/main/res/layout/activity_employee_home.xml
+++ b/app/src/main/res/layout/activity_employee_home.xml
@@ -40,6 +40,7 @@
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:layout_marginTop="100dp"
+            android:onClick="onDeliveryButtonPushed"
             android:text="@string/Delivery" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
