--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -177,6 +177,7 @@
         android:layout_marginLeft="155dp"
         android:layout_marginStart="155dp"
         android:layout_marginTop="85dp"
+        android:onClick="onOrderListButtonPush"
         android:text="@string/OrderListButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button13" />
